# RAG-on-GCP-with-VertexAI

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  vertex_search_index_metadata.json
notebooks/: understand_rag_process.ipynb
src/: .env.template
src/chatbot/: app.py  config.py
src/chatbot/images/: __init__.py
src/chatbot/lib/: chain.py  embeddings.py  errors_handler.py  filters.py  firestore.py  llms.py  logo.py  prompt.py  send_feedback.py  source_retriever.py  streaming.py
src/upload_data/: __init__.py  config.py  data_init.py  data_update.py  requirements.txt
src/upload_data/lib/: embedding.py  filters.py  firestore.py  gcs.py  get_chunks_ids.py  get_confluence_pages.py  get_updates_pages.py  loader.py  process_new_pages.py  transformer.py  typehint.py
terraform/: README.md  backend.tf  bigquery.tf  cloud_functions.tf  cloud_run.tf  datasource.tf  firestore.tf  locals.tf  outputs.tf  providers.tf  pubsub.tf  terraform.tfvars  variables.tf  vertex.tf
terraform/bootstrap/: artifact_registry.tf  backend.tf  impersonate_sa.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
tests/: test_confluence.py
tests/src/upload_data/update_gcs_active_files/: test_get_urls_of_files_to_modify.py
